@@ -1,3 +1,9 @@
+2007-03-29  Miguel de Icaza  <miguel@novell.com>
+
+	* src/mod_mono.c (do_command.GET_CLIENT_BLOCK): If we get a -1
+	from ap_get_client_block, send that value but not any further
+	data.   There is now a guard in xsp for this condition.
+
 2007-03-28  Marek Habersack  <grendello@gmail.com>
 
 	* src/mod_mono.c (do_command): abort when either xsp sends us size
